add_subdirectory(dcpu)
add_subdirectory(graphics)
add_subdirectory(gui)
add_subdirectory(heap)
add_subdirectory(mark3c)
add_subdirectory(memutil)
add_subdirectory(nlfs)
add_subdirectory(powerman)
add_subdirectory(process)
add_subdirectory(random)
add_subdirectory(rtc)
add_subdirectory(socket)
add_subdirectory(streamer)
add_subdirectory(sw_i2c)
add_subdirectory(sw_spi)
add_subdirectory(terminal)
add_subdirectory(slip)
add_subdirectory(uart)