add_subdirectory(brickbreak)
#add_subdirectory(buffalogger)
add_subdirectory(flavr_graphics)
add_subdirectory(font_test)
add_subdirectory(gui_example)
add_subdirectory(lab1_kernel_setup)
add_subdirectory(lab2_idle_function)
add_subdirectory(lab3_round_robin)
add_subdirectory(lab4_semaphores)
add_subdirectory(lab5_mutexes)
add_subdirectory(lab6_timers)
add_subdirectory(lab7_events)
add_subdirectory(lab8_messages)
add_subdirectory(lab9_dynamic_threads)
add_subdirectory(lab10_notifications)
add_subdirectory(lab11_mailboxes)
add_subdirectory(nlfs_test)
add_subdirectory(terminal_demo)
add_subdirectory(mark3c)