add_subdirectory(lab1_kernel_setup)
add_subdirectory(lab3_round_robin)
add_subdirectory(lab4_semaphore)
add_subdirectory(lab5_mutexes)
add_subdirectory(lab6_timers)
add_subdirectory(lab7_events)
add_subdirectory(lab8_messages)
add_subdirectory(lab9_dynamic_threads)
add_subdirectory(lab10_notifications)
add_subdirectory(lab11_mailboxes)
